force-app/main/default/objects/WorkOrder/fields/Assigned_Technician__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of ADO-15232. This field value to be sent to customer portal through platform event.</description>
    <label>Assigned Technician</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>