force-app/main/default/objects/WorkOrder/fields/SFS_Gantt_Label__c.field-meta.xml
<CustomField>
    <fullName>SFS_Gantt_Label__c</fullName>
    <formula>IF( NOT(ISNULL(LocationId)),Location.Name ,&apos;&apos; )+  IF(NOT(ISNULL(AssetId)),&apos; - &apos;+ Asset.Name + &apos; - &apos;+ Asset.SerialNumber,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gantt Label</label>
    <type>Text</type>
</CustomField>