force-app/main/default/objects/WorkOrder/fields/SVMXA360__ClosedById__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ClosedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who closed this Work Order.</description>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClosedByUserWorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>