force-app/main/default/objects/WorkOrder/fields/SVMXA360__ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ClosedDate__c</fullName>
    <description>The date on which this Work Order is closed.</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>