force-app/main/default/objects/WorkOrder/fields/SVMXA360__CompletedById__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CompletedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who completed this Work Order.</description>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CompletedByUserWorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>