force-app/main/default/objects/WorkOrder/fields/SVMXA360__CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CompletedDate__c</fullName>
    <description>The date on which the Work Order is completed.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>