force-app/main/default/objects/WorkOrder/fields/SVMXA360__ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContactEmail__c</fullName>
    <description>Email of Contact for Work Order</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>