force-app/main/default/objects/WorkOrder/fields/SVMXA360__ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContactPhone__c</fullName>
    <description>Primary phone number for Work Order Contact.</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>