force-app/main/default/objects/WorkOrder/fields/SVMXA360__ContractLineItemId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContractLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the associated Contract Line Item.</description>
    <label>Contract Line Item</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>