force-app/main/default/objects/WorkOrder/fields/SVMXA360__CurrentWorkStep__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CurrentWorkStep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Work Step</label>
    <referenceTo>WorkStep</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>