force-app/main/default/objects/WorkOrder/fields/SVMXA360__EntitlementDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitlementDate__c</fullName>
    <description>The entitlement date on which the Work Order is entitled. The entitlement check will default it to ‘Today’ if this field is blank.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entitlement Date</label>
    <type>Date</type>
</CustomField>