force-app/main/default/objects/WorkOrder/fields/SVMXA360__GPSCoordinates__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__GPSCoordinates__c</fullName>
    <description>This field is to store current Asset’s location.</description>
    <label>Asset GPS coordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>