force-app/main/default/objects/WorkOrder/fields/SVMXA360__NextWorkStep__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__NextWorkStep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Work Step</label>
    <referenceTo>WorkStep</referenceTo>
    <relationshipLabel>Work Orders (Next Work Step)</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>