force-app/main/default/objects/WorkOrder/fields/SVMXA360__OpportunityIdentified__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OpportunityIdentified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For a Technician to notify Sales Contact if they identify a potential Sales Lead while on a Work Order</description>
    <label>Opportunity Identified</label>
    <type>Checkbox</type>
</CustomField>