force-app/main/default/objects/WorkOrder/fields/SVMXA360__OpportunityNotes__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OpportunityNotes__c</fullName>
    <description>For the Technician to pass along notes on the potential sales lead to the sales contact</description>
    <label>Opportunity Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>