force-app/main/default/objects/WorkOrder/fields/SVMXA360__PreferredContactChannel__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PreferredContactChannel__c</fullName>
    <description>Multi-select picklist to track the customer’s preferred method of contact</description>
    <label>Preferred Contact Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eMail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>