force-app/main/default/objects/WorkOrder/fields/SVMXA360__PriceOverride__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PriceOverride__c</fullName>
    <description>This field when true indicates that the Total Entitled Price and Total Overall Price don&apos;t match.</description>
    <formula>SVMXA360__TotalOverallEntitledPrice__c  &lt;&gt;  SVMXA360__TotalOverallPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Override</label>
    <type>Checkbox</type>
</CustomField>