force-app/main/default/objects/WorkOrder/fields/SVMXA360__ProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product that is tied to the Work Order Asset.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>ProductWorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>