force-app/main/default/objects/WorkOrder/fields/SVMXA360__PurposeOfVisit__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PurposeOfVisit__c</fullName>
    <description>Picklist to track the specific reason for the field visit</description>
    <label>Purpose of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample Value 1</fullName>
            </value>
            <value>
                <fullName>Sample Value 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>