force-app/main/default/objects/WorkOrder/fields/SVMXA360__ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReferenceNumber__c</fullName>
    <description>Sales Order or PO to cover the cost of the requested service</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>