force-app/main/default/objects/WorkOrder/fields/SVMXA360__Resolution__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Resolution__c</fullName>
    <description>Type of fix that was applied to resolve the problem.</description>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reconfigured Settings</fullName>
            </value>
            <value>
                <fullName>Replaced Hardware</fullName>
            </value>
            <value>
                <fullName>System Reboot</fullName>
            </value>
            <value>
                <fullName>Upgraded Firmware</fullName>
            </value>
            <value>
                <fullName>Upgraded Software</fullName>
            </value>
            <value>
                <fullName>User Training</fullName>
            </value>
            <value>
                <fullName>Sample Value1</fullName>
                <isActive>false</isActive>
                <label>Sample Value1</label>
            </value>
            <value>
                <fullName>Sample Value2</fullName>
                <isActive>false</isActive>
                <label>Sample Value2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>