force-app/main/default/objects/WorkOrder/fields/SVMXA360__RootCause__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RootCause__c</fullName>
    <description>Root cause of the failure.</description>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Firmware Failure</fullName>
            </value>
            <value>
                <fullName>Hardware Failure</fullName>
            </value>
            <value>
                <fullName>No Problem Found</fullName>
            </value>
            <value>
                <fullName>Software Failure</fullName>
            </value>
            <value>
                <fullName>User Issue</fullName>
            </value>
            <value>
                <fullName>Sample Value1</fullName>
                <isActive>false</isActive>
                <label>Sample Value1</label>
            </value>
            <value>
                <fullName>Sample Value2</fullName>
                <isActive>false</isActive>
                <label>Sample Value2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>