force-app/main/default/objects/WorkOrder/fields/SVMXA360__Symptom__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Symptom__c</fullName>
    <description>Symptom that was noted before the failure.</description>
    <label>Symptom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error Code 0001</fullName>
            </value>
            <value>
                <fullName>Error Code 0002</fullName>
            </value>
            <value>
                <fullName>Error Code 0003</fullName>
            </value>
            <value>
                <fullName>Error Code 0004</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>