force-app/main/default/objects/WorkOrder/fields/SVMXA360__TotalExpenseCost__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalExpenseCost__c</fullName>
    <description>This field is the sum of the Total Cost field of Expense records.</description>
    <label>Total Expense Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>