force-app/main/default/objects/WorkOrder/fields/SVMXA360__TotalExpensePrice__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalExpensePrice__c</fullName>
    <description>Indicates the total price across all Expense lines linked to the Work Order</description>
    <label>Total Expense Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>