force-app/main/default/objects/WorkOrder/fields/SVMXA360__TotalLaborCost__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalLaborCost__c</fullName>
    <description>Roll up of Total Cost field of Work Order Line Item (Labor) records.</description>
    <label>Total Labor Cost</label>
    <summarizedField>WorkOrderLineItem.SVMXA360__TotalCost__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.SVMXA360__LineType__c</field>
        <operation>equals</operation>
        <value>Labor</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>