force-app/main/default/objects/WorkOrder/fields/SVMXA360__TotalListPrice__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalListPrice__c</fullName>
    <description>Indicates (List Price * Quantity) across all Product Consumed, Work Order Line Item, and Expense lines linked to the Work Order.</description>
    <label>Total List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>