force-app/main/default/objects/WorkOrder/fields/SVMXA360__TotalOverallCost__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalOverallCost__c</fullName>
    <description>Sum of Total Parts Cost, Total Labor Cost, Total Travel Cost, and Total Expense Cost.</description>
    <formula>SVMXA360__TotalPartsCost__c  +  SVMXA360__TotalLaborCost__c  +  SVMXA360__TotalTravelCost__c  +  SVMXA360__TotalExpenseCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Overall Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>