force-app/main/default/objects/WorkOrder/fields/SVMXA360__TotalOverallEntitledPrice__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalOverallEntitledPrice__c</fullName>
    <description>This field sums up the Total Entitled Price field from WOLI, Product Consumed and Expense.</description>
    <label>Total Overall Entitled Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>