force-app/main/default/objects/WorkOrder/fields/SVMXA360__TotalOverallPrice__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalOverallPrice__c</fullName>
    <description>Indicates the sum of Total Parts Price, Total Price and Total Expense Price.</description>
    <formula>SVMXA360__TotalPartsPrice__c  +  TotalPrice  +  SVMXA360__TotalExpensePrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Overall Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>