force-app/main/default/objects/WorkOrder/fields/SVMXA360__TotalPartsCost__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalPartsCost__c</fullName>
    <description>Roll up of Total Cost field of Product Consumed records.</description>
    <label>Total Parts Cost</label>
    <summarizedField>ProductConsumed.SVMXA360__TotalCost__c</summarizedField>
    <summaryForeignKey>ProductConsumed.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>