force-app/main/default/objects/WorkOrder/fields/SVMXA360__TotalPartsPrice__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalPartsPrice__c</fullName>
    <description>Indicates the sum of Total Price across all Product Consumed lines.</description>
    <label>Total Parts Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>