force-app/main/default/objects/WorkOrder/fields/SVMXA360__WorkStepStatus__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkStepStatus__c</fullName>
    <label>Work Step Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start Next Step</fullName>
                <default>true</default>
                <label>Start Next Step</label>
            </value>
            <value>
                <fullName>End Current Step</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>