force-app/main/default/objects/WorkOrder/recordTypes/SFS_Field_Operations.recordType-meta.xml
<RecordType>
    <fullName>SFS_Field_Operations</fullName>
    <active>true</active>
    <description>Work order record type for SFS</description>
    <label>Field Operations</label>
</RecordType>