force-app/main/default/objects/WorkOrder/recordTypes/SVMXA360__Depot.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__Depot</fullName>
    <active>false</active>
    <description>Depot Repair Work Order</description>
    <label>Depot</label>
</RecordType>