force-app/main/default/objects/WorkOrder/recordTypes/SVMXA360__Estimate.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__Estimate</fullName>
    <active>false</active>
    <description>Estimate Work Order</description>
    <label>Estimate</label>
</RecordType>