force-app/main/default/objects/WorkOrder/recordTypes/SVMXA360__Field.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__Field</fullName>
    <active>false</active>
    <description>Onsite field Work Orders</description>
    <label>Field</label>
</RecordType>