force-app/main/default/objects/WorkOrder/recordTypes/SVMXA360__Remote.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__Remote</fullName>
    <active>true</active>
    <description>Remote Triage Work Order</description>
    <label>Remote</label>
</RecordType>