force-app/main/default/objects/WorkOrder/listViews/SVMXA360__AllWorkOrdersView.listView-meta.xml
<ListView>
    <fullName>SVMXA360__AllWorkOrdersView</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>A360 - All Work Orders View</label>
</ListView>