force-app/main/default/objects/WorkOrder/listViews/SVMXA360__CanceledWorkOrdersView.listView-meta.xml
<ListView>
    <fullName>SVMXA360__CanceledWorkOrdersView</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <label>A360 - Canceled Work Orders View</label>
</ListView>